# ant_cc_dingding_notifier

./: .gitignore  ANTCC_INTEGRATION.md  BACKUP_POLICY.md  BUGFIX_v0.2.5.md  BUGFIX_v0.2.6.md  CHANGELOG.md  CHANGELOG_0.2.2.md  CHANGES_0.2.1.md  COMMAND_NOT_FOUND.md  DEFAULT_SETTINGS_FILE.md  DEMO.md  FIX_SUMMARY.md  GITHUB_PUBLISH.md  HOOKS_EXPANSION.md  HOOKS_FORMAT_FIX.md  HOOKS_MANAGEMENT.md  HOOKS_SAFETY.md  HOOKS_UNINSTALL_GUIDE.md  HOOK_IDENTIFICATION.md  INSTALL.md  LICENSE  MACOS_NOTIFICATION_v0.3.0.md  MACOS_TROUBLESHOOTING.md  MESSAGE_CONTENT_TABLE_v0.2.3.md  MESSAGE_CONTENT_UPDATE.md  MESSAGE_CONTENT_V0.2.4.md  MISSING_FILE_DETECTION.md  MULTI_MACHINE_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_TEAM.md  README.md  README_TEAM.md  RELEASE.md  SAFETY_SUMMARY.md  TEAM_DEPLOYMENT.md  TEAM_DEPLOYMENT_SUMMARY.md  UNINSTALL_GUIDE.md  UPDATE.md  UPGRADE_GUIDE.md  (+18 more)
.archive/: BACKUP_POLICY.md  CONTRIBUTOR_UPDATE.md  FEATURES.md  FIX_SUMMARY.md  HOOKS_FORMAT_FIX.md  HOOKS_UNINSTALL_GUIDE.md  HOOK_IDENTIFICATION.md  MESSAGE_CONTENT_FINAL_v0.2.4.md  MESSAGE_FINAL_v0.2.3.md  MISSING_FILE_DETECTION.md  PUSH_TO_GITHUB.md  QUICKSTART.md  TEAM_DEPLOYMENT_SUMMARY.md  TROUBLESHOOTING_CHECKLIST.md  UPDATE.md  VERSION_0.2.0.md  VERSION_0.2.1.md  VERSION_0.2.2.md  check_release.sh  test_all_hooks.sh  test_remaining_hooks.sh
docs/: USAGE.md
src/claude_dingtalk_notifier/: __init__.py  cli.py  config.py  dingtalk.py  logger.py  macos_notifier.py  utils.py
src/claude_dingtalk_notifier/hooks/: __init__.py  notification.py  post_tool_use.py  pre_tool_use.py  stop.py
tests/: __init__.py  test_config.py  test_dingtalk.py
