[metadata]
name = claude-dingtalk-notifier
version = 0.3.1
description = Claude Code DingTalk notification integration
long_description = file: README.md
long_description_content_type = text/markdown
author = h907530759
author_email = noreply@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    pyyaml>=6.0.0
    click>=8.1.0
    rich>=13.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    claude-dingtalk = claude_dingtalk_notifier.cli:main
    cdn = claude_dingtalk_notifier.cli:main

[bdist_wheel]
universal = 0
